--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "nft-base",
   "private": true,
   "dependencies": {
+    "@hotwired/stimulus": "^3.0.1",
+    "@hotwired/stimulus-webpack-helpers": "^1.0.1",
     "@openzeppelin/contracts": "^4.3.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "turbolinks": "^5.2.0",
+    "web3": "^1.6.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
